구글 검색 추가

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ social:
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/mellona
 
-google_site_verification: # Google Search Console verification code
+google_site_verification: google23115e084a540c7f
 
 # ↑ --------------------------
 
